# mados-updater

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  mados-updater.desktop  pyproject.toml
client/: __init__.py
client/lib/: __init__.py  config.py  snapper.py
docs/: PLAN.md
mados_updater/: __init__.py  __main__.py  mados_updater.py
mados_updater/gui/: __init__.py  colors.py  theme.py  window.py
mados_updater/gui/pages/: __init__.py  base.py
mados_updater/lib/: config.py  github.py  pacman.py  snapper.py  snapshot.py
package/: .SRCINFO  PKGBUILD
tests/: test_cli.py  test_config.py  test_github.py  test_pacman.py  test_snapper.py
